--- a/Pro.css
+++ b/Pro.css
@@ -32,6 +32,7 @@ nav {
     top: 0;
     left: 0;
     z-index: 1000;
+    overflow: hidden;
 }
 
 .nav1 h1 {
@@ -58,6 +59,16 @@ nav {
 
 .nav2 ul li a:hover {
     background-color: black;
+}
+
+.elastic {
+    align-items: center;
+    height: 100vh;
+    background-color: lightseagreen;
+    color: white;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
 }
 
 /* 🔍 Search inside nav */
@@ -124,6 +135,10 @@ nav {
     cursor: pointer;
 }
 
+.elastic {
+    height: 60vh;
+}
+
 .nav3 button:hover {
     background-color: black;
     color: white;
@@ -134,7 +149,7 @@ nav {
     outline: none;
 }
 
-.toggle i {
+.toggle {
     display: none;
     color: whitesmoke;
     cursor: pointer;
